Thu Jun 04 12:38:36 GMT 2015  Olly Betts <olly@survex.com>

	* api/documentvaluelist.h,api/leafpostlist.h,api/matchspy.cc,
	  include/xapian/,net/length.cc: Mark constructors taking a
	  single argument as "explicit" to avoid unwanted implicit
	  conversions.

Mon Jun 01 13:11:02 GMT 2015  Olly Betts <olly@survex.com>

	* NEWS.SKELETON: Remove section for "flint backend" from template.

Mon Jun 01 13:09:55 GMT 2015  Olly Betts <olly@survex.com>

	* NEWS,configure.ac: Update for 1.3.3.

Mon May 25 04:33:15 GMT 2015  Olly Betts <olly@survex.com>

	* NEWS: Update.

Sun May 24 12:52:47 GMT 2015  Olly Betts <olly@survex.com>

	* tests/api_postingsource.cc: timer_create() seems to always fail on
	  AIX with EAGAIN, so just skip the matchtimelimit1 testcase there.

Sun May 24 11:48:30 GMT 2015  Olly Betts <olly@survex.com>

	* net/tcpserver.cc: Under __WIN32__, inet_ntop()'s second parameter
	  is 'void*' (to POSIX says it should be 'const void*').

Sun May 24 11:46:25 GMT 2015  Olly Betts <olly@survex.com>

	* common/safenetdb.h: Under __WIN32__, MSDN says that newer platforms
	  need <ws2def.h> for AI_* constants.  And mingw doesn't seem to
	  define AI_NUMERICSERV yet.

Sun May 24 10:41:39 GMT 2015  Olly Betts <olly@survex.com>

	* common/safewindows.h,configure.ac: Under __WIN32__, we need to
	  specify Vista as the minimum supported version to get the
	  AI_ADDRCONFIG flag.  Older versions seem to all be out of support
	  anyway.

Sun May 24 06:46:15 GMT 2015  Olly Betts <olly@survex.com>

	* net/tcpclient.cc: Add missing declaration of variable under
	  __WIN32__.

Sun May 24 06:39:56 GMT 2015  Olly Betts <olly@survex.com>

	* tests/harness/testsuite.h: Simplify FAIL_TEST and SKIP_TEST
	  slightly.

Sat May 23 11:52:03 GMT 2015  Olly Betts <olly@survex.com>

	* tests/harness/backendmanager_remotetcp.cc: Don't leave an extra fd
	  open when starting xapian-tcpsrv for remotetcp tests.

Sat May 23 10:12:31 GMT 2015  Olly Betts <olly@survex.com>
