@@ -237,12 +237,12 @@ class XAPIAN_VISIBILITY_DEFAULT Query {
 #ifdef SWIG
     // SWIG's %template doesn't seem to handle a templated ctor so we
     // provide this fake specialised form of the above prototype.
-    Query::Query(op op_, XapianSWIGQueryItor qbegin, XapianSWIGQueryItor qend,
-		 Xapian::termcount parameter = 0);
+    Query(op op_, XapianSWIGQueryItor qbegin, XapianSWIGQueryItor qend,
+	  Xapian::termcount parameter = 0);
 
 # ifdef SWIGJAVA
-    Query::Query(op op_, XapianSWIGStrItor qbegin, XapianSWIGStrItor qend,
-		 Xapian::termcount parameter = 0);
+    Query(op op_, XapianSWIGStrItor qbegin, XapianSWIGStrItor qend,
+	  Xapian::termcount parameter = 0);
 # endif
 #endif
 
