@@ -1,3 +1,8 @@
+Thu Jun 04 12:39:51 GMT 2015  Olly Betts <olly@survex.com>
+
+	* include/xapian/query.h: Remove bogus extra "Query::" qualifier from
+	  fake Query constructor prototypes provided for SWIG.
+
 Thu Jun 04 12:38:36 GMT 2015  Olly Betts <olly@survex.com>
 
 	* api/documentvaluelist.h,api/leafpostlist.h,api/matchspy.cc,
